--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -12,7 +12,7 @@
     width: 28px;
     height: 3px;
     margin: 0 0 5px 0;
-    background: white;
+    background: set-text-color($primary-color);
     @include easeOut;
   }
 
@@ -103,27 +103,25 @@
       //slide in from right
       transform: translate3d(0, 0, 0);
     }
-    &.current>a{
+    &.current > a {
       color: $secondary-color;
     }
   }
-.nav-link{
-  display: inline-block;
-  position: relative;
-  font-size: 30px;
-  text-transform: uppercase;
-  padding: 1rem 0;
-  font-weight: 300;
-  color: #fff;
-  text-decoration: none;
-  @include easeOut;
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    color: set-text-color($primary-color);
+    text-decoration: none;
+    @include easeOut;
 
-  &:hover{
-    color:$secondary-color;
+    &:hover {
+      color: $secondary-color;
+    }
   }
-
-}
-
 }
 //delay each nav-item slide by 0.1s
 @for $x from 1 through 4 {
