--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,3 +66,11 @@ main{
         }
     }
 }
+
+.about-info{
+    display: grid;
+    grid-template-areas:
+     'bioimage bio bio'
+     'job1 job2 job3';
+     grid-template-columns: repeat(3,1fr);
+}
