--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,7 +87,7 @@ main {
 
 .job-1 {
   grid-area: job1;
-  border-bottom: $secondary-color 3px solid;
+  
 }
 
 .job-2 {
@@ -98,7 +98,19 @@ main {
   grid-area: job3;
   border-bottom: $secondary-color 3px solid;
 }
+.job {
+  background: lighten($primary-color, 5);
+  padding: 0.5rem;
+  border-bottom: $secondary-color 3px solid;
+}
 
 .job-heading {
   font-size: 15px;
+}
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
 }
