--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,11 +1,17 @@
 //wideScreens
 
-// @include mediaXl {
-// }
+@include mediaXl {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
 
-// //Desktops and Laptops
-// @include meadiaLg {
-// }
+//Desktops and Laptops
+@include mediaLg {
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
 
 //Tablets and Small Laptops
 @include mediaMd {
@@ -45,11 +51,17 @@
       height: 150px;
     }
   }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 //Smartphones
 @include mediaSm {
   main#home h1 {
     margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
   }
 }
