--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,7 +87,6 @@ main {
 
 .job-1 {
   grid-area: job1;
-  
 }
 
 .job-2 {
@@ -107,6 +106,46 @@ main {
 .job-heading {
   font-size: 15px;
 }
+/* //work/projects */
+.projects {
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut;
+    }
+  }
+}
+
+//Button styles
+.btn {
+  display: block;
+  padding: 0.7rem;
+ width: 100%;
+  border: 0;
+  margin-bottom: 0.3rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #333;
+}
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #fff;
+}
 #main-footer {
   text-align: center;
   padding: 1rem;
@@ -114,3 +153,5 @@ main {
   color: set-text-color($primary-color);
   height: 60px;
 }
+
+@import "mobile";
